Added bayesian approach for sto attacker with unknown parameter and mab/probabilistic feedback settings

--- a/notebooks/Read batch and run.ipynb
+++ b/notebooks/Read batch and run.ipynb
@@ -73,6 +73,7 @@
     "from importlib import *\n",
     "import time\n",
     "import os\n",
+    "import shutil\n",
     "import re\n",
     "from copy import deepcopy, copy\n",
     "import datetime\n",
@@ -160,8 +161,8 @@
    "outputs": [],
    "source": [
     "experiments_folder = \"../NewExperiments\"\n",
-    "exp_subfolder = \"/Bayesian vs FB\"\n",
-    "batch_name = \"bd\"\n",
+    "exp_subfolder = \"/FB MAB feedback\"\n",
+    "batch_name = \"fb_mab_feedback_multiple_profiles\"\n",
     "batch_file = batch_name + \".csv\"\n",
     "batch_path = experiments_folder + exp_subfolder + \"/\" + batch_file"
    ]
@@ -188,6 +189,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "if os.path.isdir(experiments_folder + exp_subfolder + \"/\" + batch_name):\n",
+    "    shutil.rmtree(experiments_folder + exp_subfolder + \"/\" + batch_name)\n",
     "b.parse_batch()"
    ]
   },
@@ -238,7 +241,7 @@
     "                      \"lb\": c.stats[\"lb_exp_regret\"],\n",
     "                      \"ub\": c.stats[\"ub_exp_regret\"]}\n",
     "                     for c in confs]\n",
-    "            util.plot_dicts(dlist, save=True, show=False, semilog=True,\n",
+    "            util.plot_dicts(dlist, save=True, show=False, semilog=False,\n",
     "                            path=b.results_folder_path,\n",
     "                            title=confs[0].game.players[1].__class__.name)"
    ]
@@ -252,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,119 +273,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0: [0.11419633184172229, 0.25181572011138853, 0.2725101789168181, 0.09783584192850785, 0.06065874750248494, 0.20298317969907825], 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [5], 0: [2]}\n",
-      "{0: (0, 0, 0, 0, 0, 1), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
+      "{0: (0, 0, 0, 0, 1, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [3], 0: [4]}\n",
+      "{0: (0, 0, 0, 0, 1, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [3], 0: [4]}\n",
+      "{0: (0, 0, 0, 0, 0, 1), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
       "{1: [0], 0: [5]}\n",
-      "{0: (0, 0, 0, 0, 0, 1), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [0], 0: [5]}\n",
-      "{0: (1, 0, 0, 0, 0, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [3], 0: [0]}\n",
-      "{0: (1, 0, 0, 0, 0, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [1], 0: [0]}\n",
-      "{0: (1, 0, 0, 0, 0, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [4], 0: [0]}\n",
-      "{0: (1, 0, 0, 0, 0, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [5], 0: [0]}\n",
-      "{0: (0, 0, 0, 0, 0, 1), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [1], 0: [5]}\n",
-      "{0: (0, 1, 0, 0, 0, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [4], 0: [1]}\n",
-      "{0: (0, 1, 0, 0, 0, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
+      "{0: (0, 0, 0, 0, 0, 1), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [5], 0: [5]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
       "{1: [0], 0: [1]}\n",
-      "{0: (1, 0, 0, 0, 0, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [4], 0: [0]}\n",
-      "{0: (1, 0, 0, 0, 0, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [4], 0: [0]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [3], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [4], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [1], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [4], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [5], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [4], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [1], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [5], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [4], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [4], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [5], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [1], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [2], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [4], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [5], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [2], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [4], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [4], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [4], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [1], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [1], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [2], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [4], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [0], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [4], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [5], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [3], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [4], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [2], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [3], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [5], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [5], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [1], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [1], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [0], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [1], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [3], 0: [4]}\n",
-      "{0: (0, 0, 0, 0, 1, 0), 1: [0.078, 0.123, 0.132, 0.05, 0.436, 0.181]}\n",
-      "{1: [4], 0: [4]}\n"
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [3], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [5], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [1], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [0], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [3], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [0], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [0], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [1], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [2], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [1], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [1], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [0], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [0], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [0], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [0], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [0], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [3], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [2], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [0], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [0], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [3], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [0], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [1], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [0], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [0], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [0], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [1], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [0], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [1], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [1], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [3], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [3], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [2], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [3], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [0], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [0], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [3], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [3], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [1], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [1], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [1], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [0], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [0], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [0], 0: [1]}\n",
+      "{0: (0, 1, 0, 0, 0, 0), 1: [0.28728728728728725, 0.32432432432432434, 0.15015015015015015, 0.2122122122122122, 0.003003003003003003, 0.02302302302302302]}\n",
+      "{1: [1], 0: [1]}\n"
      ]
     }
    ],
    "source": [
     "for i in range(50):\n",
-    "    e.run_interaction()\n",
+    "    e.run_interaction_with_observations()\n",
     "    print(e.game.strategy_history[-1])\n",
     "    #print(util.game_str(e.game, lenght=7))\n",
     "    print(e.game.history[-1])\n",
@@ -391,10 +394,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 'a', 1: 'b', 2: 'c', 3: 'd', 4: 'e', 5: 'f', 6: 'g'}\n",
+      "5\n",
+      "f\n"
+     ]
+    }
+   ],
+   "source": [
+    "dct={\"a\":0,\"b\":0,\"c\":0,\"d\":0,\"e\":0,\"f\":0,\"g\":0}\n",
+    "num = list(range(len(dct)))\n",
+    "keys_dic={k: p for k, p in zip(num, dct.keys())}\n",
+    "print(keys_dic)\n",
+    "np.random.shuffle(num)\n",
+    "\n",
+    "p = max(num, key=lambda x: dct[keys_dic[x]])\n",
+    "print(p)\n",
+    "print(keys_dic[p])"
+   ]
   }
  ],
  "metadata": {
