--- a/notebooks/Test DMD vs stochastic.ipynb
+++ b/notebooks/Test DMD vs stochastic.ipynb
@@ -264,7 +264,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "defender =[\"DMD1\"]"
+    "defender =[\"FB1\"]"
    ]
   },
   {
@@ -285,8 +285,8 @@
    "outputs": [],
    "source": [
     "experiments_folder = \"../NewExperiments\"\n",
-    "exp_subfolder = \"/vsStochastic\"\n",
-    "batch_name = \"dmd\"\n",
+    "exp_subfolder = \"/Bayesian vs FB\"\n",
+    "batch_name = \"fb\"\n",
     "batch_file = batch_name + \".csv\"\n",
     "batch_path = experiments_folder + exp_subfolder + \"/\" + batch_file"
    ]
