--- a/notebooks/Test DMD vs Stackelberg.ipynb
+++ b/notebooks/Test DMD vs Stackelberg.ipynb
@@ -162,9 +162,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "((0.699, 0.699), (0.977, 0.977), (0.98, 0.98), (0.771, 0.771), (0.914, 0.914), (0.692, 0.692))\n",
-      "[(0.095, 0.544, 0.102, 0.167, 0.056, 0.036), (0.14014014014014015, 0.1111111111111111, 0.3493493493493493, 0.29729729729729726, 0.04404404404404404, 0.058058058058058054), (0.05094905094905095, 0.2107892107892108, 0.4615384615384616, 0.17582417582417584, 0.05694305694305695, 0.04395604395604396), (0.079, 0.225, 0.04, 0.395, 0.157, 0.104), (0.096, 0.043, 0.303, 0.325, 0.224, 0.009), (0.012, 0.052, 0.103, 0.436, 0.22, 0.177), (0.06293706293706293, 0.3766233766233766, 0.03196803196803197, 0.23476523476523473, 0.17982017982017978, 0.11388611388611387), (0.10210210210210209, 0.13613613613613615, 0.07807807807807808, 0.6126126126126126, 0.03203203203203203, 0.03903903903903904), (0.286, 0.114, 0.431, 0.055, 0.052, 0.062), (0.02897102897102897, 0.5124875124875125, 0.015984015984015984, 0.0799200799200799, 0.03196803196803197, 0.33066933066933063)]\n",
-      "chosen =  (0.07292707292707293, 0.29570429570429574, 0.18181818181818182, 0.018981018981018984, 0.22977022977022982, 0.20079920079920083)\n"
+      "((0.608, 0.608), (0.624, 0.624), (0.595, 0.595), (0.672, 0.672), (0.907, 0.907), (0.95, 0.95))\n",
+      "[(0.011, 0.15, 0.05, 0.313, 0.188, 0.288), (0.04395604395604396, 0.015984015984015987, 0.3056943056943057, 0.2457542457542458, 0.2317682317682318, 0.15684315684315686), (0.07207207207207206, 0.13413413413413414, 0.14014014014014015, 0.09709709709709709, 0.5235235235235235, 0.03303303303303303), (0.247, 0.228, 0.211, 0.275, 0.007, 0.032), (0.062062062062062065, 0.1091091091091091, 0.3433433433433434, 0.23423423423423426, 0.2172172172172172, 0.03403403403403404), (0.15015015015015015, 0.012012012012012012, 0.008008008008008008, 0.24524524524524524, 0.5635635635635635, 0.021021021021021023), (0.039, 0.102, 0.453, 0.362, 0.022, 0.022), (0.415, 0.224, 0.017, 0.142, 0.134, 0.068), (0.33266733266733267, 0.08791208791208789, 0.14585414585414583, 0.07492507492507491, 0.14985014985014983, 0.20879120879120877), (0.133, 0.746, 0.087, 0.029, 0.002, 0.003), (0.013, 0.078, 0.1, 0.014, 0.23, 0.565), (0.000999000999000999, 0.2017982017982018, 0.042957042957042946, 0.31768231768231764, 0.25574425574425574, 0.1808191808191808), (0.031, 0.039, 0.026, 0.22, 0.229, 0.455), (0.5564435564435565, 0.05194805194805194, 0.042957042957042946, 0.03196803196803197, 0.022977022977022973, 0.29370629370629364), (0.023, 0.403, 0.345, 0.079, 0.008, 0.142), (0.101, 0.224, 0.074, 0.055, 0.387, 0.159), (0.05, 0.071, 0.245, 0.448, 0.103, 0.083), (0.09809809809809811, 0.16816816816816818, 0.11511511511511512, 0.2882882882882883, 0.2952952952952953, 0.035035035035035036), (0.20720720720720723, 0.11811811811811812, 0.06206206206206207, 0.06806806806806807, 0.07507507507507508, 0.4694694694694695), (0.112, 0.045, 0.309, 0.13, 0.085, 0.319), (0.17300000000000001, 0.20900000000000002, 0.17500000000000002, 0.19200000000000003, 0.045000000000000005, 0.20600000000000002), (0.14585414585414586, 0.38061938061938067, 0.2077922077922078, 0.01098901098901099, 0.17782217782217782, 0.07692307692307693), (0.285, 0.037, 0.232, 0.028, 0.273, 0.145), (0.11, 0.251, 0.09, 0.113, 0.335, 0.101), (0.11, 0.058, 0.109, 0.389, 0.321, 0.013), (0.139, 0.207, 0.023, 0.033, 0.157, 0.441), (0.024024024024024024, 0.07707707707707707, 0.37037037037037035, 0.003003003003003003, 0.3833833833833834, 0.14214214214214213), (0.096, 0.022, 0.588, 0.171, 0.101, 0.022), (0.022, 0.047, 0.241, 0.232, 0.303, 0.155)]\n",
+      "chosen =  (0.05800000000000001, 0.32200000000000006, 0.13100000000000003, 0.09200000000000001, 0.30700000000000005, 0.09000000000000001)\n"
      ]
     }
    ],
@@ -180,7 +180,7 @@
     "#obs_vect = [obs.get(i) for i in range(len(targets))]\n",
     "#generating pure strat and some rand mixed strat stochastic attackers\n",
     "distributions = []\n",
-    "for i in range(10):\n",
+    "for i in range(29):\n",
     "    distributions.append(tuple(util.gen_distr(T)))\n",
     "print(distributions)\n",
     "chosen_distr = tuple(util.gen_distr(T))\n",
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -208,8 +208,8 @@
     "prof = []\n",
     "for distr in distributions:\n",
     "    prof.append(attackers.StochasticAttacker(g, 1, 1, *distr))\n",
-    "for i in range(10):\n",
-    "    prof.append(attackers.SUQR(g,1))\n",
+    "#for i in range(10):\n",
+    "#    prof.append(attackers.SUQR(g,1))\n",
     "chosen_a_prof = (attackers.StackelbergAttacker(g, 1))\n",
     "a = [deepcopy(chosen_a_prof)]\n",
     "prof.append(chosen_a_prof)\n",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,16 +240,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Name,T,0,1,2,3,4,5,Defender,Attacker,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile\\n'"
+       "'Name,T,0,1,2,3,4,5,Defender,Attacker,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile\\n'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,16 +260,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "defender =[\"DMD1\"]"
+    "defender =[\"FB1\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,13 +280,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "experiments_folder = \"../NewExperiments\"\n",
-    "exp_subfolder = \"/vsStackelberg\"\n",
-    "batch_name = \"dmd\"\n",
+    "exp_subfolder = \"/Bayesian vs FB\"\n",
+    "batch_name = \"fb\"\n",
     "batch_file = batch_name + \".csv\"\n",
     "batch_path = experiments_folder + exp_subfolder + \"/\" + batch_file"
    ]
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -346,71 +346,89 @@
        "      <th>Defender</th>\n",
        "      <th>Attacker</th>\n",
        "      <th>...</th>\n",
-       "      <th>Profile.11</th>\n",
-       "      <th>Profile.12</th>\n",
-       "      <th>Profile.13</th>\n",
-       "      <th>Profile.14</th>\n",
-       "      <th>Profile.15</th>\n",
-       "      <th>Profile.16</th>\n",
-       "      <th>Profile.17</th>\n",
-       "      <th>Profile.18</th>\n",
-       "      <th>Profile.19</th>\n",
        "      <th>Profile.20</th>\n",
+       "      <th>Profile.21</th>\n",
+       "      <th>Profile.22</th>\n",
+       "      <th>Profile.23</th>\n",
+       "      <th>Profile.24</th>\n",
+       "      <th>Profile.25</th>\n",
+       "      <th>Profile.26</th>\n",
+       "      <th>Profile.27</th>\n",
+       "      <th>Profile.28</th>\n",
+       "      <th>Profile.29</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>DMD1_vs_sta1</td>\n",
+       "      <td>FB1_vs_sta1</td>\n",
        "      <td>100</td>\n",
-       "      <td>0.772</td>\n",
-       "      <td>0.914</td>\n",
-       "      <td>0.94</td>\n",
-       "      <td>0.758</td>\n",
-       "      <td>0.728</td>\n",
-       "      <td>0.858</td>\n",
-       "      <td>DMD1</td>\n",
+       "      <td>0.608</td>\n",
+       "      <td>0.624</td>\n",
+       "      <td>0.595</td>\n",
+       "      <td>0.672</td>\n",
+       "      <td>0.907</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>FB1</td>\n",
        "      <td>sta1</td>\n",
        "      <td>...</td>\n",
-       "      <td>suqr1-8.299-0.073</td>\n",
-       "      <td>sto1-0.024024024024024024-0.12812812812812813-...</td>\n",
-       "      <td>suqr1-13.642-0.54</td>\n",
-       "      <td>suqr1-8.918-0.982</td>\n",
-       "      <td>suqr1-12.686-0.222</td>\n",
-       "      <td>suqr1-7.565-0.457</td>\n",
-       "      <td>suqr1-10.585-0.262</td>\n",
-       "      <td>suqr1-12.485-0.815</td>\n",
-       "      <td>suqr1-7.811-0.677</td>\n",
-       "      <td>sto1-0.07607607607607607-0.47147147147147145-0...</td>\n",
+       "      <td>sto1-0.000999000999000999-0.2017982017982018-0...</td>\n",
+       "      <td>sto1-0.04395604395604396-0.015984015984015987-...</td>\n",
+       "      <td>sto1-0.17300000000000001-0.20900000000000002-0...</td>\n",
+       "      <td>sto1-0.5564435564435565-0.05194805194805194-0....</td>\n",
+       "      <td>sto1-0.024024024024024024-0.07707707707707707-...</td>\n",
+       "      <td>sto1-0.05-0.071-0.245-0.448-0.103-0.083</td>\n",
+       "      <td>sto1-0.33266733266733267-0.08791208791208789-0...</td>\n",
+       "      <td>sto1-0.013-0.078-0.1-0.014-0.23-0.565</td>\n",
+       "      <td>sto1-0.039-0.102-0.453-0.362-0.022-0.022</td>\n",
+       "      <td>sto1-0.20720720720720723-0.11811811811811812-0...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 31 columns</p>\n",
+       "<p>1 rows × 40 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           Name    T      0      1     2      3      4      5 Defender  \\\n",
-       "0  DMD1_vs_sta1  100  0.772  0.914  0.94  0.758  0.728  0.858     DMD1   \n",
+       "          Name    T      0      1      2      3      4     5 Defender  \\\n",
+       "0  FB1_vs_sta1  100  0.608  0.624  0.595  0.672  0.907  0.95      FB1   \n",
        "\n",
        "  Attacker                        ...                          \\\n",
        "0     sta1                        ...                           \n",
        "\n",
-       "          Profile.11                                         Profile.12  \\\n",
-       "0  suqr1-8.299-0.073  sto1-0.024024024024024024-0.12812812812812813-...   \n",
+       "                                          Profile.20  \\\n",
+       "0  sto1-0.000999000999000999-0.2017982017982018-0...   \n",
        "\n",
-       "          Profile.13         Profile.14          Profile.15  \\\n",
-       "0  suqr1-13.642-0.54  suqr1-8.918-0.982  suqr1-12.686-0.222   \n",
+       "                                          Profile.21  \\\n",
+       "0  sto1-0.04395604395604396-0.015984015984015987-...   \n",
        "\n",
-       "          Profile.16          Profile.17          Profile.18  \\\n",
-       "0  suqr1-7.565-0.457  suqr1-10.585-0.262  suqr1-12.485-0.815   \n",
+       "                                          Profile.22  \\\n",
+       "0  sto1-0.17300000000000001-0.20900000000000002-0...   \n",
        "\n",
-       "          Profile.19                                         Profile.20  \n",
-       "0  suqr1-7.811-0.677  sto1-0.07607607607607607-0.47147147147147145-0...  \n",
+       "                                          Profile.23  \\\n",
+       "0  sto1-0.5564435564435565-0.05194805194805194-0....   \n",
        "\n",
-       "[1 rows x 31 columns]"
+       "                                          Profile.24  \\\n",
+       "0  sto1-0.024024024024024024-0.07707707707707707-...   \n",
+       "\n",
+       "                                Profile.25  \\\n",
+       "0  sto1-0.05-0.071-0.245-0.448-0.103-0.083   \n",
+       "\n",
+       "                                          Profile.26  \\\n",
+       "0  sto1-0.33266733266733267-0.08791208791208789-0...   \n",
+       "\n",
+       "                              Profile.27  \\\n",
+       "0  sto1-0.013-0.078-0.1-0.014-0.23-0.565   \n",
+       "\n",
+       "                                 Profile.28  \\\n",
+       "0  sto1-0.039-0.102-0.453-0.362-0.022-0.022   \n",
+       "\n",
+       "                                          Profile.29  \n",
+       "0  sto1-0.20720720720720723-0.11811811811811812-0...  \n",
+       "\n",
+       "[1 rows x 40 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
