Multi-profile games working + tested

--- a/notebooks/Prepare game with partial feedbacks.ipynb
+++ b/notebooks/Prepare game with partial feedbacks.ipynb
@@ -156,12 +156,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0.521, 0.007, 0.018, 0.19, 0.264), (0.2147852147852148, 0.2317682317682318, 0.40159840159840166, 0.07892107892107893, 0.07292707292707293), (0.162, 0.351, 0.025, 0.238, 0.224), (0.13613613613613615, 0.20120120120120125, 0.2622622622622623, 0.21721721721721723, 0.1831831831831832), (0.1861861861861862, 0.19319319319319322, 0.29129129129129133, 0.07707707707707709, 0.2522522522522523)]\n"
+     ]
+    }
+   ],
    "source": [
     "time_horizon = 100\n",
-    "T = 20\n",
+    "T = 5\n",
     "#targets = util.gen_tar_with_len(T)\n",
     "targets = [1 for i in range(T)]\n",
     "values = tuple((v, v) for v in targets)\n",
@@ -171,24 +179,24 @@
     "observabilities = [1 for i in range(T)]\n",
     "feedback_type = \"full\"\n",
     "distributions = []\n",
-    "#for i in range(5):\n",
-    "#    distributions.append(tuple(util.gen_distr(T)))\n",
-    "#print(distributions)\n",
+    "for i in range(5):\n",
+    "    distributions.append(tuple(util.gen_distr(T)))\n",
+    "print(distributions)\n",
     "distributions.append(tuple([1/T for i in range(T)]))\n",
-    "#chosen_distr = tuple(util.gen_distr(T))\n",
+    "chosen_distr = tuple(util.gen_distr(T))\n",
     "#chosen_distr = tuple([1/T for i in range(T)])\n",
-    "chosen_distr = tuple([0.031] + [0.051 for i in range(19)])\n",
+    "#chosen_distr = tuple([0.031] + [0.051 for i in range(19)])\n",
     "#print(\"chosen = \", chosen_distr)\n",
     "#len(chosen_distr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "g = game.GameWithObservabilities(values, time_horizon, observabilities, feedback_prob, feedback_type = \"mab\")\n",
+    "g = game.PartialFeedbackGame(values, time_horizon, observabilities, feedback_prob, feedback_type = \"full\")\n",
     "g.attackers = [1]\n",
     "g.defenders = [0]\n",
     "d = [bm.FB(g, 0)]\n",
@@ -213,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,16 +241,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Name,T,0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,Defender,Attacker,Profile,Profile,Profile,Obs0,Obs1,Obs2,Obs3,Obs4,Obs5,Obs6,Obs7,Obs8,Obs9,Obs10,Obs11,Obs12,Obs13,Obs14,Obs15,Obs16,Obs17,Obs18,Obs19,Feed_prob0,Feed_prob1,Feed_prob2,Feed_prob3,Feed_prob4,Feed_prob5,Feed_prob6,Feed_prob7,Feed_prob8,Feed_prob9,Feed_prob10,Feed_prob11,Feed_prob12,Feed_prob13,Feed_prob14,Feed_prob15,Feed_prob16,Feed_prob17,Feed_prob18,Feed_prob19,Feed_type\\n'"
+       "'Name,T,0,1,2,3,4,Defender,Attacker,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Profile,Obs0,Obs1,Obs2,Obs3,Obs4,Feed_prob0,Feed_prob1,Feed_prob2,Feed_prob3,Feed_prob4,Feed_type\\n'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,13 +281,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "experiments_folder = \"../NewExperiments\"\n",
-    "exp_subfolder = \"/Full_vs_MAB\"\n",
-    "batch_name = \"extreme_case_6\"\n",
+    "exp_subfolder = \"/Multi_prof\"\n",
+    "batch_name = \"test1\"\n",
     "batch_file = batch_name + \".csv\"\n",
     "batch_path = experiments_folder + exp_subfolder + \"/\" + batch_file"
    ]
@@ -293,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
